--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
   </head>
   <body>
     <div class="container">
+      <input
+        type="text"
+        name="searchBar"
+        id="searchBar"
+        placeholder="Search by name..."
+      />
+      <!-- <div class="form_container">
+        <form action="#" id="input_form">
+          <div class="input_div">
+            <input type="text" id="name" placeholder="Search by name..." />
+          </div>
+        </form>
+      </div> -->
       <!-- <div class="student_container">
         <div class="image_container">
           <img src="img/pexels-photo.jpeg" alt="student-image" />
@@ -29,7 +42,7 @@
           </ul>
         </div>
       </div> -->
-      <div class="student_container">
+      <!-- <div class="student_container">
         <div class="image_container">
           <img src="img/pexels-photo.jpeg" alt="student-image" />
         </div>
@@ -42,7 +55,7 @@
             <li class="student__details-item">Average: 88.95%</li>
           </ul>
         </div>
-      </div>
+      </div> -->
     </div>
     <script src="utils/API.js"></script>
     <script src="utils/UI.js"></script>
