Added student filter feature

--- a/index.html
+++ b/index.html
@@ -15,33 +15,18 @@
   </head>
   <body>
     <div class="container">
-      <input
-        type="text"
-        name="searchBar"
-        id="searchBar"
-        placeholder="Search by name..."
-      />
-      <!-- <div class="form_container">
-        <form action="#" id="input_form">
+      <div class="form_container">
+        <form id="searchForm">
           <div class="input_div">
-            <input type="text" id="name" placeholder="Search by name..." />
+            <input
+              type="text"
+              id="searchTerm"
+              placeholder="Search by name..."
+            />
           </div>
         </form>
-      </div> -->
-      <!-- <div class="student_container">
-        <div class="image_container">
-          <img src="img/pexels-photo.jpeg" alt="student-image" />
-        </div>
-        <div class="student_details">
-          <h5>James Snow</h5>
-          <ul class="student_detail_list">
-            <li class="student__details-item">Email: jamessnow@gmail.com</li>
-            <li class="student__details-item">Company: Yadel</li>
-            <li class="student__details-item">Skill: Oracle</li>
-            <li class="student__details-item">Average: 88.95%</li>
-          </ul>
-        </div>
-      </div> -->
+      </div>
+      <div class="student_content"></div>
       <!-- <div class="student_container">
         <div class="image_container">
           <img src="img/pexels-photo.jpeg" alt="student-image" />
