Added student marks list functionality

--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
       integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
       crossorigin="anonymous"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+      integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/style.css" />
     <title>STUDENT PROFILES</title>
@@ -26,21 +33,33 @@
           </div>
         </form>
       </div>
-      <div class="student_content"></div>
-      <!-- <div class="student_container">
-        <div class="image_container">
-          <img src="img/pexels-photo.jpeg" alt="student-image" />
-        </div>
-        <div class="student_details">
-          <h5>James Snow</h5>
-          <ul class="student_detail_list">
-            <li class="student__details-item">Email: jamessnow@gmail.com</li>
-            <li class="student__details-item">Company: Yadel</li>
-            <li class="student__details-item">Skill: Oracle</li>
-            <li class="student__details-item">Average: 88.95%</li>
-          </ul>
-        </div>
-      </div> -->
+      <div class="student_content">
+        <!-- <div class="student_container">
+          <div class="image_container">
+            <img src="img/pexels-photo.jpeg" alt="student-image" />
+          </div>
+          <div class="student_details">
+            <div class="header_content">
+              <h5>James Snow</h5>
+              <button id="marks_toggle">
+                <i class="fa fa-plus fa-2x marks_toggle"></i>
+              </button>
+            </div>
+            <ul class="student_detail_list">
+              <li class="student__details-item">Email: jamessnow@gmail.com</li>
+              <li class="student__details-item">Company: Yadel</li>
+              <li class="student__details-item">Skill: Oracle</li>
+              <li class="student__details-item">Average: 88.95%</li>
+            </ul>
+            <ul class="students_marks">
+              <li class="marks__list-item">Test1 70%</li>
+              <li class="marks__list-item">Test2 80%</li>
+              <li class="marks__list-item">Test3 67%</li>
+              <li class="marks__list-item">Test4 90%</li>
+            </ul>
+          </div>
+        </div> -->
+      </div>
     </div>
     <script src="utils/API.js"></script>
     <script src="utils/UI.js"></script>
