Added tag search form

--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css"
-      integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7"
-      crossorigin="anonymous"
-    /> -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
@@ -22,14 +16,19 @@
   </head>
   <body>
     <div class="container">
+      <!--Search Form-->
       <div class="form_container">
         <form id="searchForm">
           <div class="input_div">
-            <input
-              type="text"
-              id="searchTerm"
-              placeholder="Search by name..."
-            />
+            <input type="text" id="searchTerm" placeholder="Search by name..." />
+          </div>
+        </form>
+      </div>
+      <!--Tags Form-->
+      <div class="form_container">
+        <form id="tagForm">
+          <div class="input_div">
+            <input type="text" id="searchTag" placeholder="Search by tag..." />
           </div>
         </form>
       </div>
