Added tag form in the UI

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
       <div class="form_container">
         <form id="searchForm">
           <div class="input_div">
-            <input type="text" id="searchTerm" placeholder="Search by name..." />
+            <input
+              type="text"
+              id="searchTerm"
+              placeholder="Search by name..."
+            />
           </div>
         </form>
       </div>
@@ -50,6 +54,19 @@
               <li class="student__details-item">Skill: Oracle</li>
               <li class="student__details-item">Average: 88.95%</li>
             </ul>
+            
+            <div class="tag__area">
+              <div class="tag">
+                <p>New Tag</p>
+              </div>
+              <div class="tag__form">
+                <form id="tagForm">
+                  <input type="text" id="tag" placeholder="Add Tag..." />
+                </form>
+              </div>
+            </div>
+
+            
             <ul class="students_marks">
               <li class="marks__list-item">Test1 70%</li>
               <li class="marks__list-item">Test2 80%</li>
